Bug 1972290 [Wayland/HDR] Allow to reuse already attached wl_buffer r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D254920